--- a/Windows-MacOs/Windows-MacOs/Windows_MacOs.csproj
+++ b/Windows-MacOs/Windows-MacOs/Windows_MacOs.csproj
@@ -345,7 +345,7 @@
     <Compile Include="DataRepository\Repositories\Unit\S016Repository.cs" />
     <Compile Include="DataRepository\Repositories\Unit\S018Repository.cs" />
     <Compile Include="DataRepository\Repositories\Unit\SrtRepository.cs" />
-    <Compile Include="Models\Manager\Canvas\MenuModel.cs" />
+    <Compile Include="Models\Manager\Canvas\CanvasMenuModel.cs" />
     <Compile Include="Models\Manager\Canvas\CanvasModel.cs" />
     <Compile Include="Models\MenuModel.cs" />
     <Compile Include="Resources\Messages.Designer.cs" />
