--- a/Windows-MacOs/Windows-MacOs/Web.config
+++ b/Windows-MacOs/Windows-MacOs/Web.config
@@ -16,7 +16,7 @@
     <add name="J-Works" connectionString="Data Source=192.168.0.11;Initial Catalog=REAFS_R;Persist Security Info=True;User ID=sa;Password=net123aA@;Connection Timeout=500" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <secret>
-    <add key="JWT" value="reafswjwtninsyou" />
+    <add key="JWT" value="reafswjwtninsyoutufnoapyzqukrdfe" />
     <add key="Audience" value="jwtAudience" />
     <add key="Issuer" value="jwtIssuer" />
   </secret>
