--- a/Windows-MacOs/Windows-MacOs/packages.config
+++ b/Windows-MacOs/Windows-MacOs/packages.config
@@ -24,7 +24,9 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyModel" version="7.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Abstractions" version="7.0.3" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="7.0.3" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Logging" version="7.0.3" targetFramework="net48" />
@@ -55,7 +57,7 @@
   <package id="System.Text.Json" version="7.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
-  <package id="Unity" version="2.1.505.0" targetFramework="net48" />
-  <package id="Unity.Mvc3" version="1.2" targetFramework="net48" />
+  <package id="Unity" version="5.11.1" targetFramework="net48" />
+  <package id="Unity.Mvc5" version="1.4.0" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
 </packages>
