--- a/Windows-MacOs/Windows-MacOs/Windows_MacOs.csproj
+++ b/Windows-MacOs/Windows-MacOs/Windows_MacOs.csproj
@@ -297,7 +297,9 @@
     <Compile Include="Business\Filters\AuthorizationResponse.cs" />
     <Compile Include="Business\Filters\JWTAuthorizeAttribute.cs" />
     <Compile Include="Business\IServices\Manager\ICanvasService.cs" />
+    <Compile Include="Business\IServices\Manager\ISQLCompareService.cs" />
     <Compile Include="Business\IServices\Manager\Partial\ICanvasService.cs" />
+    <Compile Include="Business\IServices\Manager\Partial\ISQLCompareService.cs" />
     <Compile Include="Business\IServices\Reafs-R-Web\Common\ICommonService.cs" />
     <Compile Include="Business\IServices\Reafs-R-Web\Common\Partial\ICommonService.cs" />
     <Compile Include="Business\IServices\Reafs_T\Common\ILoginService.cs" />
@@ -310,12 +312,16 @@
     <Compile Include="Business\IServices\Reafs_T\Common\Partial\ICommonService.cs" />
     <Compile Include="Business\Services\Manager\CanvasService.cs" />
     <Compile Include="Business\Services\Manager\Partial\CanvasService.cs" />
+    <Compile Include="Business\Services\Manager\Partial\SQLCompareService.cs" />
+    <Compile Include="Business\Services\Manager\SQLCompareService.cs" />
     <Compile Include="Business\Services\Reafs_T\Common\CommonService.cs" />
     <Compile Include="Business\Services\Reafs_T\Common\LoginService.cs" />
     <Compile Include="Business\Services\Reafs_T\Common\Partial\CommonService.cs" />
     <Compile Include="Business\Services\Reafs_T\Common\Partial\LoginService.cs" />
     <Compile Include="Business\Services\Reafs_T\Common\TD00001\TD00001Service.cs" />
     <Compile Include="Business\Services\Reafs_T\Common\TD00001\Partial\TD00001Service.cs" />
+    <Compile Include="Controllers\Manager\Common\Partial\SQLCompareController.cs" />
+    <Compile Include="Controllers\Manager\Common\SQLCompareController.cs" />
     <Compile Include="Controllers\Reafs_T\Common\TD00001\TD00001Controller.cs" />
     <Compile Include="Controllers\Reafs_T\Common\TD00001\Partial\TD00001Controller.cs" />
     <Compile Include="Business\Services\Reafs_W\Common\CommonService.cs" />
@@ -361,6 +367,14 @@
     <Compile Include="DataRepository\Repositories\Unit\SrtRepository.cs" />
     <Compile Include="Models\Manager\Canvas\CanvasMenuModel.cs" />
     <Compile Include="Models\Manager\Canvas\CanvasModel.cs" />
+    <Compile Include="Models\Manager\SQLCompare\ModelHelper.cs" />
+    <Compile Include="Models\Manager\SQLCompare\SQLColumnModel.cs" />
+    <Compile Include="Models\Manager\SQLCompare\SQLCompareModel.cs" />
+    <Compile Include="Models\Manager\SQLCompare\SQLDefaultConstraint.cs" />
+    <Compile Include="Models\Manager\SQLCompare\SQLTableModel.cs" />
+    <Compile Include="Models\Manager\SQLCompare\SQLTypeModel.cs" />
+    <Compile Include="Models\Manager\SQLCompare\StatusEnum.cs" />
+    <Compile Include="Models\Manager\SQLCompare\StepEnum.cs" />
     <Compile Include="Models\MenuModel.cs" />
     <Compile Include="Resources\Messages.Designer.cs" />
     <Compile Include="Utility\Attributes\Check\MaxLengthExAttribute.cs" />
@@ -541,6 +555,7 @@
     <Content Include="Scripts\knockout.validation.min.js" />
     <Content Include="Scripts\master\GetMessages.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\Pages\Manager\sqlcompare.js" />
     <Content Include="Scripts\Pages\Manager\canvas.js" />
     <Content Include="Scripts\popper-utils.js" />
     <Content Include="Scripts\popper-utils.min.js" />
@@ -656,6 +671,10 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\SQLCompare\Index.cshtml" />
+    <Content Include="Views\SQLCompare\_SQLCompare.cshtml" />
+    <Content Include="Views\SQLCompare\EditorTemplates\SQLTables.cshtml" />
+    <Content Include="Views\SQLCompare\EditorTemplates\SQLTableModel.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
