--- a/Windows-MacOs/Windows-MacOs/Web.config
+++ b/Windows-MacOs/Windows-MacOs/Web.config
@@ -13,9 +13,9 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WinMacOs-20230527112352.mdf;Initial Catalog=aspnet-WinMacOs-20230527112352;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="WinMacDbContext" connectionString="Data Source=DION16;Initial Catalog=REAFS_R;Persist Security Info=True;User ID=sa;Password=net123aA@;Connection Timeout=500" providerName="System.Data.SqlClient" />
-    <add name="J-Works" connectionString="Data Source=192.168.0.11;Initial Catalog=REAFS_R;Persist Security Info=True;User ID=sa;Password=net123aA@;Connection Timeout=500" providerName="System.Data.SqlClient" />
-    <add name="Compare_Source" connectionString="Data Source=192.168.0.11;Initial Catalog=REAFS_R;Persist Security Info=True;User ID=sa;Password=net123aA@;Connection Timeout=500" providerName="System.Data.SqlClient" />
-    <add name="Compare_Target" connectionString="Data Source=DION16;Initial Catalog=REAFS_R;Persist Security Info=True;User ID=sa;Password=net123aA@;Connection Timeout=500" providerName="System.Data.SqlClient" />
+    <add name="J-Works" connectionString="Data Source=PC-2;Initial Catalog=REAFS_R;Persist Security Info=True;User ID=sa;Password=net123aA@;Connection Timeout=500" providerName="System.Data.SqlClient" />
+    <add name="Compare_Source" connectionString="Data Source=PC-2;Initial Catalog=REAFS_R;Persist Security Info=True;User ID=sa;Password=net123aA@;Connection Timeout=500" providerName="System.Data.SqlClient" />
+    <add name="Compare_Target" connectionString="Data Source=PC-2;Initial Catalog=REAFS_T;Persist Security Info=True;User ID=sa;Password=net123aA@;Connection Timeout=500" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <secret>
     <add key="JWT" value="reafswjwtninsyoutufnoapyzqukrdfe" />
